# aula19_bootcamp

./: main.py  pyproject.toml  test.db
src/: main.py
